# tree-sitter-metal

./: .gitignore  .release-please-config.json  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: FUNDING.yml
.github/workflows/: CI.yml  Release.yml
bindings/: run_tests.sh
bindings/c/: test_binding.c
bindings/go/: binding_test.go  go.mod
bindings/node/: binding.cc  binding_test.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_metal/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterMetalTests/: TreeSitterMetalTests.swift
examples/: simple_shader.metal
src/: grammar.json  node-types.json  parser.c  scanner.c
