[package]
name = "tree-sitter-metal"
description = "A Tree Sitter Grammar for Apple's Metal Shading Language."
version = "0.0.1"
authors = ["Joseph D. Carpinelli <joey@loopy.codes>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "metal"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/loopy-codes/tree-sitter-metal"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.9"
