[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-metal"
description = "A Tree Sitter Grammar for Apple's Metal Shading Language."
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "metal"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Joseph D. Carpinelli", email = "joey@loopy.codes" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/loopy-codes/tree-sitter-metal"
Funding = "https://github.com/sponsors/loopy-codes"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
